[tool.poetry]
name = "PythonArch"
version = "0.1.0"
description = ""
authors = ["GauterHeart <gauterheart@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aio-pika = "8.2.1"
fastapi = "^0.89.1"
asyncpg = "^0.27.0"
python-dotenv = "^0.21.0"
aioredis = "^2.0.1"
cryptography = "^39.0.0"
uvicorn = "^0.20.0"
ujson = "^5.7.0"
loguru = "^0.6.0"
psycopg2 = "^2.9.5"


[tool.poetry.group.formatter.dependencies]
autoflake = "^2.0.0"
docformatter = "^1.5.1"
isort = "^5.11.4"
black = "^22.12.0"


[tool.poetry.group.lsp.dependencies]
python-lsp-server = {extras = ["all"], version = "^1.7.1"}
pylsp-mypy = "^0.6.5"


[tool.poetry.group.linter.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"


[tool.poetry.group.dev.dependencies]
yoyo-migrations = "^8.2.0"
types-ujson = "^5.7.0.0"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
exclude = "./venv/"
ignore_missing_imports = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false

[tool.isort]
profile = "black"

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
